# space-anchor

./: .gitignore  readme.md
client/: .gitignore  .ignore  Makefile  client.code-workspace  client.uproject  index.html  package.json  style.css  tsconfig.json  vite.config.ts
client/Config/: DefaultEngine.ini  DefaultGame.ini
client/Plugins/Renet/: Renet.uplugin
client/Saved/SourceControl/: UncontrolledChangelists.json
client/Source/: client.Target.cs  clientEditor.Target.cs
client/Source/client/: client.Build.cs  client.cpp  client.h  clientCharacter.cpp  clientCharacter.h  clientGameMode.cpp  clientGameMode.h  clientPlayerController.cpp  clientPlayerController.h
client/public/data/: fractions.json  races.json
client/src/: index.ts
models/: base_ship.blend  base_ship.blend1  base_ship.gltf
server/: Cargo.toml  ecs-diagram.drawio
server/.cargo/: config.toml
server/bevy_websocket_server/: Cargo.toml
server/bevy_websocket_server/src/: events.rs  lib.rs  message.rs  server.rs  systems.rs
server/bevy_websocket_server_derive/: Cargo.toml
server/bevy_websocket_server_derive/src/: lib.rs
server/channels/: Cargo.toml
server/channels/src/: lib.rs
server/messages/: Cargo.toml
server/messages/src/: lib.rs
server/messages_derive/: Cargo.toml
server/messages_derive/src/: lib.rs
server/server/: Cargo.toml
server/server/src/: main.rs
server/server/src/admiral/: components.rs  mod.rs
server/server/src/fog_of_war/: components.rs  messages.rs  mod.rs  resources.rs  systems.rs
server/server/src/fraction/: components.rs
server/server/src/map/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
server/server/src/networking/: messages.rs  mod.rs  resources.rs  systems.rs
server/server/src/player/: components.rs  messages.rs  mod.rs  systems.rs
server/server/src/readable/: components.rs  mod.rs
server/src/: main.rs
server/src/admiral/: components.rs  mod.rs
server/src/networking/: channel.rs  messages.rs  mod.rs  resources.rs  systems.rs  version.rs
server/src/player/: components.rs  mod.rs
server/src/readable/: components.rs  mod.rs
(+57 files in other folders)
