[package]
name = "main"
version = "0.1.0"
edition = "2021"
publish = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = ["bevy_asset"]}
serde = "1.0.160"
bevy_pkv = "0.7.0"
bevy_renet = "0.0.7"