[package]
name = "bevy_websocket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.160"
bevy_websocket_server_derive = { path = "../bevy_websocket_server_derive"}
serde_json = "1.0.96"
bevy = { version = "0.10.1", default-features = false }
async-net = "1.6.1"
futures = "0.3.21"
async-tungstenite = "0.22.2"
crossbeam-channel = "0.5.5"
async-channel = "1.6.1"