[package]
name = "messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_renet = "0.0.7"
serde = "1.0.160"
messages_derive = { path = "../messages_derive"}
serde_json = "1.0.96"
bevy = { version = "0.10.1", default-features = false }
