[package]
name = "main"
version = "0.1.0"
edition = "2021"
publish = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = ["bevy_asset" ]}
serde = "1.0.160"
serde_json = "1.0.96"
bevy_websocket_server = { path = "../bevy_websocket_server" }
